--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.25.0",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "postcss-normalize": "^10.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon-cloud": "^4.1.7",
     "react-scripts": "^5.0.1",
     "tailwind-merge": "^3.4.0"
   },
