--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.3.1",
     "react-icon-cloud": "^4.1.7",
     "react-scripts": "^5.0.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "to-fast-properties": "2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
