--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "3"
   }
 }
